# libx10

./: .gitignore  README  autogen.sh  configure.ac
include/: Makefile.am
include/x10/: cm11.h
src/: Makefile.am  cm11.c  debug.h  x10codes.c  x10proto.c  x10proto.h
test/: Makefile.am  cm11mon.c  cm11shell.c  x10test.c
